--- a/src/dashboard/Dashboard.fxml
+++ b/src/dashboard/Dashboard.fxml
@@ -43,10 +43,10 @@
                            <font>
                               <Font name="System Bold Italic" size="30.0" />
                            </font></Label>
-                        <Button layoutX="10.0" layoutY="223.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="@Default_Style.css" text="Home" />
-                        <Button layoutX="10.0" layoutY="268.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="@Default_Style.css" text="New Parcel" />
-                        <Button layoutX="10.0" layoutY="313.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="@Default_Style.css" text="Search" />
-                        <Button layoutX="10.0" layoutY="358.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="@Default_Style.css" text="Report" />
+                        <Button layoutX="10.0" layoutY="223.0" mnemonicParsing="false" onAction="#toHomePane" prefHeight="40.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="@Default_Style.css" text="Home" />
+                        <Button layoutX="10.0" layoutY="268.0" mnemonicParsing="false" onAction="#toNewParcelPane" prefHeight="40.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="@Default_Style.css" text="New Parcel" />
+                        <Button layoutX="10.0" layoutY="313.0" mnemonicParsing="false" onAction="#toSearchPane" prefHeight="40.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="@Default_Style.css" text="Search" />
+                        <Button layoutX="10.0" layoutY="358.0" mnemonicParsing="false" onAction="#toReportPane" prefHeight="40.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="@Default_Style.css" text="Report" />
                         <Button layoutX="10.0" layoutY="593.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="@Default_Style.css" text="Setting" />
                         <Button layoutX="10.0" layoutY="638.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="@Default_Style.css" text="Help" />
                         <Line endX="81.5" layoutX="109.0" layoutY="678.0" startX="-100.0" stroke="WHITE" />
@@ -63,7 +63,7 @@
                      <children>
                         <AnchorPane prefHeight="700.0" prefWidth="1060.0" styleClass="main-pane" stylesheets="@Default_Style.css" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                            <children>
-                              <AnchorPane fx:id="homePane" layoutX="5.0" prefHeight="700.0" prefWidth="1060.0" stylesheets="@Default_Style.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="-5.0" AnchorPane.topAnchor="0.0">
+                              <AnchorPane fx:id="homePane" layoutX="5.0" prefHeight="700.0" prefWidth="1060.0" stylesheets="@Default_Style.css" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="-5.0" AnchorPane.topAnchor="0.0">
                                  <children>
                                     <Pane layoutX="-5.0" layoutY="59.0" prefHeight="150.0" prefWidth="1040.0" stylesheets="@Default_Style.css">
                                        <children>
@@ -147,7 +147,6 @@
                                           </LineChart>
                                        </children>
                                     </Pane>
-                                    <ComboBox fx:id="monthComboBox" layoutX="848.0" layoutY="25.0" onAction="#resetHomePane" prefHeight="35.0" prefWidth="166.0" />
                                  </children>
                               </AnchorPane>
                               <AnchorPane fx:id="newParcelPane" layoutX="5.0" prefHeight="700.0" prefWidth="1060.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="-5.0" AnchorPane.topAnchor="0.0">
@@ -429,17 +428,17 @@
                                     </AnchorPane>
                                  </children>
                               </AnchorPane>
-                              <AnchorPane fx:id="searchPane" prefHeight="700.0" prefWidth="1060.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <AnchorPane fx:id="searchPane" prefHeight="700.0" prefWidth="1060.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <children>
                                     <VBox layoutX="31.0" layoutY="36.0" prefHeight="705.0" prefWidth="564.0" AnchorPane.bottomAnchor="37.60000000000002" AnchorPane.leftAnchor="31.0" AnchorPane.rightAnchor="464.19999999999993" AnchorPane.topAnchor="36.0">
                                        <children>
                                           <TableView fx:id="parcelTable" fixedCellSize="0.0" prefHeight="706.0" prefWidth="564.0" stylesheets="@Default_Style.css">
                                             <columns>
-                                              <TableColumn fx:id="parcelIdColumn" prefWidth="61.06661796569824" text="ID" />
-                                                <TableColumn fx:id="parcelSendDateColumn" prefWidth="109.59992218017578" text="Send Date" />
-                                                <TableColumn fx:id="parcelSenderColumn" prefWidth="160.0" text="Sender" />
-                                                <TableColumn fx:id="parcelRecipientColumn" prefWidth="151.20001220703125" text="Recipient" />
-                                                <TableColumn fx:id="parcelStatusColumn" prefWidth="84.79995727539062" text="Status" />
+                                              <TableColumn fx:id="parcelIdColumn" prefWidth="46.40005224943161" text="ID" />
+                                                <TableColumn fx:id="parcelSendDateColumn" prefWidth="96.7999382019043" text="Send Date" />
+                                                <TableColumn fx:id="parcelSenderColumn" prefWidth="148.7999725341797" text="Sender" />
+                                                <TableColumn fx:id="parcelRecipientColumn" prefWidth="160.79998779296875" text="Recipient" />
+                                                <TableColumn fx:id="parcelStatusColumn" prefWidth="112.00003051757812" text="Status" />
                                             </columns>
                                              <columnResizePolicy>
                                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -458,11 +457,11 @@
                                                 </Label>
                                                 <HBox prefHeight="22.0" prefWidth="309.0" spacing="7.0">
                                                    <children>
-                                                      <ComboBox fx:id="searchComboBox" prefHeight="26.0" prefWidth="80.0">
+                                                      <ComboBox fx:id="searchComboBox" onAction="#resetParcelTable" prefHeight="26.0" prefWidth="80.0">
                                                          <HBox.margin>
                                                             <Insets left="10.0" />
                                                          </HBox.margin></ComboBox>
-                                                      <TextField fx:id="searchBar" HBox.hgrow="ALWAYS">
+                                                      <TextField fx:id="searchBar" onAction="#resetParcelTable" HBox.hgrow="ALWAYS">
                                                          <HBox.margin>
                                                             <Insets left="8.0" right="10.0" />
                                                          </HBox.margin></TextField>
@@ -473,12 +472,12 @@
                                                 </HBox>
                                                 <HBox alignment="CENTER_LEFT">
                                                    <children>
-                                                      <ComboBox fx:id="statusComboBox" prefHeight="26.0" prefWidth="80.0">
+                                                      <ComboBox fx:id="statusComboBox" onAction="#resetParcelTable" prefHeight="26.0" prefWidth="80.0" promptText="Status">
                                                          <HBox.margin>
                                                             <Insets left="10.0" />
                                                          </HBox.margin>
                                                       </ComboBox>
-                                                      <ComboBox fx:id="codComboBox" prefHeight="26.0" prefWidth="74.0">
+                                                      <ComboBox fx:id="codComboBox" onAction="#resetParcelTable" prefHeight="26.0" prefWidth="74.0" promptText="COD">
                                                          <HBox.margin>
                                                             <Insets left="16.0" />
                                                          </HBox.margin>
@@ -644,6 +643,7 @@
                                        </content>
                                     </ScrollPane>
                                  </children></AnchorPane>
+                              <ComboBox fx:id="monthComboBox" layoutX="847.0" layoutY="26.0" onAction="#resetHomePane" prefHeight="35.0" prefWidth="166.0" />
                            </children></AnchorPane>
                      </children>
                   </AnchorPane>
