--- a/src/dashboard/Dashboard.fxml
+++ b/src/dashboard/Dashboard.fxml
@@ -149,13 +149,13 @@
                                     </Pane>
                                  </children>
                               </AnchorPane>
-                              <AnchorPane fx:id="newParcelPane" layoutX="5.0" prefHeight="700.0" prefWidth="1060.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="-5.0" AnchorPane.topAnchor="0.0">
+                              <AnchorPane fx:id="newParcelPane" layoutX="5.0" prefHeight="700.0" prefWidth="1060.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="-5.0" AnchorPane.topAnchor="0.0">
                                  <children>
                                     <AnchorPane layoutX="14.0" layoutY="47.0" prefHeight="320.0" prefWidth="620.0">
                                        <children>
                                           <AnchorPane layoutY="37.0" prefHeight="272.0" prefWidth="600.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
                                              <children>
-                                                <Text layoutX="20.0" layoutY="22.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name:" wrappingWidth="89.13671875">
+                                                <Text layoutX="20.0" layoutY="22.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name *" wrappingWidth="89.13671875">
                                                    <font>
                                                       <Font name="Inter Regular" size="14.0" />
                                                    </font></Text>
@@ -167,7 +167,7 @@
                                                    <font>
                                                       <Font size="14.0" />
                                                    </font></TextField>
-                                                <Text layoutX="20.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Phone Number:" wrappingWidth="153.13671875">
+                                                <Text layoutX="20.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Phone Number *" wrappingWidth="153.13671875">
                                                    <font>
                                                       <Font name="Inter Regular" size="14.0" />
                                                    </font>
@@ -187,7 +187,7 @@
                                                       <Font name="Inter Regular" size="14.0" />
                                                    </font>
                                                 </Text>
-                                                <Text layoutX="20.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address:" wrappingWidth="153.13671875">
+                                                <Text layoutX="20.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address *" wrappingWidth="153.13671875">
                                                    <font>
                                                       <Font name="Inter Regular" size="14.0" />
                                                    </font>
@@ -197,7 +197,7 @@
                                                       <Font size="14.0" />
                                                    </font>
                                                 </TextField>
-                                                <Text layoutX="20.0" layoutY="228.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ZIP:" wrappingWidth="153.13671875">
+                                                <Text layoutX="20.0" layoutY="228.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ZIP *" wrappingWidth="153.13671875">
                                                    <font>
                                                       <Font name="Inter Regular" size="14.0" />
                                                    </font>
@@ -207,7 +207,7 @@
                                                       <Font size="14.0" />
                                                    </font>
                                                 </TextField>
-                                                <Text layoutX="310.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name:" wrappingWidth="89.13671875">
+                                                <Text layoutX="310.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name *" wrappingWidth="89.13671875">
                                                    <font>
                                                       <Font name="Inter Regular" size="14.0" />
                                                    </font>
@@ -225,7 +225,7 @@
                                        <children>
                                           <AnchorPane layoutY="37.0" prefHeight="272.0" prefWidth="600.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
                                              <children>
-                                                <Text layoutX="20.0" layoutY="20.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name" wrappingWidth="89.13671875">
+                                                <Text layoutX="20.0" layoutY="20.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name *" wrappingWidth="89.13671875">
                                                    <font>
                                                       <Font name="Inter Regular" size="14.0" />
                                                    </font>
@@ -240,7 +240,7 @@
                                                       <Font size="14.0" />
                                                    </font>
                                                 </TextField>
-                                                <Text layoutX="20.0" layoutY="88.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Phone Number:" wrappingWidth="153.13671875">
+                                                <Text layoutX="20.0" layoutY="88.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Phone Number *" wrappingWidth="153.13671875">
                                                    <font>
                                                       <Font name="Inter Regular" size="14.0" />
                                                    </font>
@@ -260,7 +260,7 @@
                                                       <Font name="Inter Regular" size="14.0" />
                                                    </font>
                                                 </Text>
-                                                <Text layoutX="20.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address:" wrappingWidth="153.13671875">
+                                                <Text layoutX="20.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address *" wrappingWidth="153.13671875">
                                                    <font>
                                                       <Font name="Inter Regular" size="14.0" />
                                                    </font>
@@ -270,7 +270,7 @@
                                                       <Font size="14.0" />
                                                    </font>
                                                 </TextField>
-                                                <Text layoutX="20.0" layoutY="219.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ZIP:" wrappingWidth="153.13671875">
+                                                <Text layoutX="20.0" layoutY="219.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ZIP *" wrappingWidth="153.13671875">
                                                    <font>
                                                       <Font name="Inter Regular" size="14.0" />
                                                    </font>
@@ -280,7 +280,7 @@
                                                       <Font size="14.0" />
                                                    </font>
                                                 </TextField>
-                                                <Text layoutX="310.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name:" wrappingWidth="89.13671875">
+                                                <Text layoutX="310.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name *" wrappingWidth="89.13671875">
                                                    <font>
                                                       <Font name="Inter Regular" size="14.0" />
                                                    </font>
@@ -314,7 +314,7 @@
                                                    </font>
                                                 </Text>
                                                 <TextArea fx:id="newParcelNote" layoutX="20.0" layoutY="96.0" prefHeight="71.0" prefWidth="349.0" styleClass="text-field" wrapText="true" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" />
-                                                <Text layoutX="22.4" layoutY="192.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Weight (gram):" wrappingWidth="106.7366943359375" AnchorPane.leftAnchor="22.4">
+                                                <Text layoutX="22.4" layoutY="192.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Weight (gram) *" wrappingWidth="106.7366943359375" AnchorPane.leftAnchor="22.4">
                                                    <font>
                                                       <Font name="Inter Regular" size="14.0" />
                                                    </font>
@@ -324,7 +324,7 @@
                                                       <Font size="14.0" />
                                                    </font>
                                                 </TextField>
-                                                <CheckBox layoutX="20.8" layoutY="249.0" mnemonicParsing="false" text="COD:" AnchorPane.leftAnchor="20.8">
+                                                <CheckBox fx:id="codCheckBox" layoutX="20.8" layoutY="249.0" mnemonicParsing="false" text="COD:" AnchorPane.leftAnchor="20.8">
                                                    <font>
                                                       <Font name="Inter Regular" size="14.0" />
                                                    </font>
@@ -410,7 +410,7 @@
                                                       </TextField>
                                                       <Separator layoutX="34.0" layoutY="249.0" prefHeight="4.0" prefWidth="285.0" />
                                                    </children></AnchorPane>
-                                                <Button layoutX="40.0" layoutY="625.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="140.0" styleClass="tool-button" stylesheets="@Default_Style.css" text="Create" textFill="WHITE" AnchorPane.leftAnchor="40.0" />
+                                                <Button layoutX="40.0" layoutY="625.0" mnemonicParsing="false" onAction="#registerNewParcel" prefHeight="34.0" prefWidth="140.0" styleClass="tool-button" stylesheets="@Default_Style.css" text="Register" textFill="WHITE" AnchorPane.leftAnchor="40.0" />
                                                 <Button layoutX="208.8" layoutY="627.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="140.0" styleClass="tool-button" stylesheets="@Default_Style.css" text="Cancel" textFill="WHITE" AnchorPane.rightAnchor="40.0" />
                                                 <CheckBox layoutX="216.0" layoutY="248.0" mnemonicParsing="false" text="Get Notifications">
                                                    <font>
@@ -428,7 +428,7 @@
                                     </AnchorPane>
                                  </children>
                               </AnchorPane>
-                              <AnchorPane fx:id="searchPane" prefHeight="700.0" prefWidth="1060.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <AnchorPane fx:id="searchPane" prefHeight="700.0" prefWidth="1060.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <children>
                                     <VBox layoutX="31.0" layoutY="36.0" prefHeight="705.0" prefWidth="564.0" AnchorPane.bottomAnchor="37.60000000000002" AnchorPane.leftAnchor="31.0" AnchorPane.rightAnchor="464.19999999999993" AnchorPane.topAnchor="36.0">
                                        <children>
@@ -461,7 +461,7 @@
                                                          <HBox.margin>
                                                             <Insets left="10.0" />
                                                          </HBox.margin></ComboBox>
-                                                      <TextField fx:id="searchBar" onAction="#resetParcelTable" HBox.hgrow="ALWAYS">
+                                                      <TextField fx:id="searchBar" onKeyTyped="#resetParcelTable" HBox.hgrow="ALWAYS">
                                                          <HBox.margin>
                                                             <Insets left="8.0" right="10.0" />
                                                          </HBox.margin></TextField>
@@ -573,7 +573,7 @@
                                                                   <Insets left="10.0" right="10.0" top="8.0" />
                                                                </VBox.margin>
                                                             </TextArea>
-                                                            <Button fx:id="updateButton" mnemonicParsing="false" onAction="#updateParcelInfo" text="Update" textFill="WHITE">
+                                                            <Button mnemonicParsing="false" onAction="#updateParcelInfo" text="Update" textFill="WHITE">
                                                                <VBox.margin>
                                                                   <Insets left="10.0" top="8.0" />
                                                                </VBox.margin>
