--- a/src/dashboard/Dashboard.fxml
+++ b/src/dashboard/Dashboard.fxml
@@ -63,7 +63,7 @@
                      <children>
                         <AnchorPane prefHeight="700.0" prefWidth="1060.0" styleClass="main-pane" stylesheets="@Default_Style.css" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                            <children>
-                              <AnchorPane fx:id="homePane" layoutX="5.0" prefHeight="700.0" prefWidth="1060.0" stylesheets="@Default_Style.css" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="-5.0" AnchorPane.topAnchor="0.0">
+                              <AnchorPane fx:id="homePane" layoutX="5.0" prefHeight="700.0" prefWidth="1060.0" stylesheets="@Default_Style.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="-5.0" AnchorPane.topAnchor="0.0">
                                  <children>
                                     <Pane layoutX="-5.0" layoutY="59.0" prefHeight="150.0" prefWidth="1040.0" stylesheets="@Default_Style.css">
                                        <children>
@@ -428,7 +428,7 @@
                                     </AnchorPane>
                                  </children>
                               </AnchorPane>
-                              <AnchorPane fx:id="searchPane" prefHeight="700.0" prefWidth="1060.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <AnchorPane fx:id="searchPane" prefHeight="700.0" prefWidth="1060.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <children>
                                     <VBox layoutX="31.0" layoutY="36.0" prefHeight="705.0" prefWidth="564.0" AnchorPane.bottomAnchor="37.60000000000002" AnchorPane.leftAnchor="31.0" AnchorPane.rightAnchor="464.19999999999993" AnchorPane.topAnchor="36.0">
                                        <children>
@@ -636,7 +636,7 @@
                                     </VBox>
                                  </children>
                               </AnchorPane>
-                              <AnchorPane fx:id="reportPane" layoutX="10.0" layoutY="10.0" prefHeight="767.0" prefWidth="1048.0" visible="false" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+                              <AnchorPane fx:id="reportPane" layoutX="10.0" layoutY="10.0" prefHeight="767.0" prefWidth="1048.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                                  <children>
                                     <ScrollPane layoutX="7.0" prefHeight="754.0" prefWidth="1034.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                        <content>
