--- a/src/dashboard/Default_Style.css
+++ b/src/dashboard/Default_Style.css
@@ -1,5 +1,11 @@
 .text{
-    -fx-font-family: "Segoe UI"
+    -fx-font-family: "Segoe UI";
+
+}
+
+.image_view{
+    -fx-background-radius: 20;
+    -fx-border-radius: 20
 }
 
 .nav-form{
@@ -33,16 +39,6 @@
     -fx-background-radius: 20px;
 }
 
-/* .order-form{
-    -fx-background-color: #fff; 
-    -fx-background-radius: 10px;
-} */
-
-
-/* .card-shadown{
-    -fx-background-color: #f1f1f1;
-} */
-
 .scroll-pane{
     -fx-background-radius: 20px;
     -fx-background: transparent;
@@ -51,14 +47,46 @@
     -fx-background-insets: 0;
 }
 
-.chart-legend-item text {
-    -fx-font-size: 14px;
-    -fx-text-fill: #000;
+.chart-legend-item{
+    -fx-font-size: 12px;
+    -fx-text-fill: #505050;
 }
 
+.chart-title {
+    -fx-text-fill: #fff;
+    -fx-font-family: "Segoe UI";
+    -fx-font-size: 18px;
+    -fx-font-weight: bold;
+    -fx-padding: 0 0 10 0
+}
+
+.chart-pie{
+    -fx-background-color: #fff;
+    -fx-opacity: .9
+}
+
+.chart-pie-label{
+    -fx-fill: #fff;
+    -fx-font-family: "Segoe UI";
+    -fx-font-size: 12px;
+}
+
+.default-color0.chart-bar { -fx-bar-fill: #fff; -fx-opacity: .9}
+.default-color1.chart-bar { -fx-bar-fill: #fff; -fx-opacity: .9}
+
+.axis-label {
+    -fx-font-size: 12px;
+    -fx-text-fill: #505050;
+}
+
+.axis {
+    -fx-font-size: 12px;    
+    -fx-tick-label-fill: #505050;
+    -fx-font-family:"Segoe UI";
+}
 
 .header-label{
-    -fx-font-family: Segoe UI;
+    -fx-font-family: "Segoe UI";
     -fx-font-size: 20px;
     -fx-font-weight: bold;
     -fx-text-fill: #A75D5D
@@ -118,50 +146,3 @@
 .table-view .column-header .label{
     -fx-text-fill: #fff
 }
-
-/* .table-view .table-column{
-    -fx-alignment: center
-} */
-
-/* .text_view{
-    -fx-background-color: transparent;
-    -fx-border-width: .4;
-    -fx-border-radius: 5;
-    -fx-border-color: #787878;
-}
-
-.button{
-    -fx-background-color: #42d7f5;
-} */
-
-/* .tab-pane > .tab-header-area {
-  -fx-padding: 0;
-} */
-
-/* .tab-pane > .tab-header-area > .tab-header-background {
-  -fx-background-color: #E1E1E1, white;
-  -fx-background-insets: 0, 0 0 1px 0;
-}
-
-.tab-pane > .tab-header-area > .headers-region > .tab {
-  -fx-background-color: white;
-  -fx-background-insets: 0 0 1px 0;
-  -fx-padding: 1.5em 1em;
-}
-
-.tab-pane > .tab-header-area > .headers-region > .tab >.tab-container >.tab-label {
-  -fx-text-fill: #63B5F6;
-}
-
-.tab-pane > .tab-header-area > .headers-region > .tab:selected {
-  -fx-background-color: #2092ED, white;
-  -fx-background-insets: 0, 0 0 2px 0;
-}
-
-.tab-pane > .tab-header-area > .headers-region > .tab:selected >.tab-container >.tab-label {
-  -fx-text-fill: #2095F3;
-}
-
-.tab-pane > .tab-header-area > .headers-region > .tab:selected >.tab-container >.focus-indicator {
-  -fx-opacity: 0;
-} */
